--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script type="text/javascript" src="js/Keyboard.js"></script>
     <script type="text/javascript" src="js/gen_rgb.js"></script>
     <script type="text/javascript" src="js/viewEdit.js"></script>
-    <script type="text/javascript" src="js/exporters.js"></script>
+    <script type="text/javascript" src="js/exporters2.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
 </head>
 <!-- ===================================== END HEADER ===================================== -->
