--- a/index.html
+++ b/index.html
@@ -22,79 +22,30 @@
       <body onload="onLoad()" onkeydown="keyDown(event)" onkeyup="keyUp(event)">
           <center><h3><i>Reference Image</i></h3></center>
               <center>
-                <!--
-                  <form action="help.html"><input type="submit" value="Help Page" /></form>
-                  <br><a href="https://www.pouet.net/prod.php?which=90167">Leave a comment on Pouet!</a>
-                  <br> -->
                   <img id='refImg' src="data/refImg.png">
                   <br><input type="file" id="file-input"/>
                   <br /><br />            
-                <!--  Target Platform:
-                  <select id="platform"onchange="onPlatformChosen()">
-                    <option value=target_OCS>Amiga OCS</option>
-                    <option value=target_nothing>--- coming soon ---</option>
-                    <option value=target_ST>Atari ST</option>
-                    <option value=target_STE>Atari STE</option>
-                    <option value=target_CPC>Amstrad CPC</option>
-                    <option value=target_C64>Commodore 64</option>
-                  </select>
-                  <br> 
-                  HTML to Platform color conversion:
-                  <select id="conversionAlgo" onchange="onDrop()">
-                    <option value=clampColor selected="selected">Clamp Color</option>
-                    <option value=nearestColor>Nearest Color</option>
-                  </select>
-                  <br /><br />
-                  &nbsp;&nbsp;&nbsp;Crop X&nbsp;<input type="text" id="cropX" name="cropX" onchange="onCrop()" size="8">
-                  &nbsp;&nbsp;&nbsp;Crop Y&nbsp;<input type="text" id="cropY" name="cropY" onchange="onCrop()" size="8">
-                  <br>&nbsp;&nbsp;&nbsp;Crop W&nbsp;<input type="text" id="cropW" name="cropW" onchange="onCrop()" size="8">
-                  &nbsp;&nbsp;&nbsp;Crop H&nbsp;<input type="text" id="cropH" name="cropH" onchange="onCrop()" size="8">
-                  <br><button type="button" class="fa fa-scissors" onclick="onDoCrop()"> Crop</button><button type="button" class="fa fa-magic" onclick="onDrop()"> Reset</button><br>
-                  -->
                   <canvas id='workCanvas'></canvas>
               </center>
               <hr>
 
 
               <center><h3><i>Work Bench</i></h3></center>
+              
               <div id="workBench" class="col_3" style='background-color:rgba(0,0,0,0);'>
-                <!--
-                <br><button type="button" class="fa fa-arrow-circle-up" onclick="pal_ascending();"> Ascending</button>
-                <button type="button" class="fa fa-arrow-circle-down" onclick="pal_descending();"> Descending</button><br>
-                <br>lock color 0&nbsp;<input type="checkbox" id="lockclr0" name="lockclr0" onchange="onLockCol0()"></br>
-                <br><button onclick="importPalette()">Import</button>
-                &nbsp;from:&nbsp;<select id="loadpalettefrom">
-                  <option value=loadpalettefrom_binary>.bin</option>
-                  <option value=loadpalettefrom_asm>.asm</option>
-                  <option value=loadpalettefrom_clip>clipboard</option>
-                  </select>
-                <div id='paletteColors' style='background-color:rgba(200,200,200,0.5);'>
-                </div>
-                -->
+                <input type="text" id="listname" name="listname">
+                <button type="button" onclick="addNewList(null);">New List</button>
+                <br>
+                <label for="alllists">Current list:</label>
+              <select name="alllists" id="alllists" onchange="refreshPointsList();">
+              </select>
+              <br>
+                <select name="ptslist" id="ptslist" size="0">  
+              </select>                  
               </div>
               <div class="col_9" style='background-color:rgba(0,0,0,0);'>
-                <!-- Zoom&nbsp;<input type="range" min="1" max="8" value="2" class="slider" id="zoom" oninput="buildViewImage()">
-                -->
                 BobSize&nbsp;<input type="range" min="1" max="32" value="2" class="slider" id="bobsize">
                 Interp&nbsp;<input type="range" min="0" max="32" value="0" class="slider" id="interp">
-                <!--
-                &nbsp;&nbsp;&nbsp;<label for="colorcycle">Color Cycle: </label><input type="range" min="0" max="511" value="1" class="slider" id="colorcycle" oninput="doColorCycle()" onmousedown="startColorCycle()" ontouchstart="startColorCycle()" onmouseup="endColorCycle()" ontouchend="endColorCycle()"  onfocusout="endColorCycle()">
-                <br>show:&nbsp;<select id="viewShow" onchange="buildViewImage()">
-                  <option value=viewShow_normal>normal</option>
-                  <option value=viewShow_sprites>sprites</option>
-                  <option value=viewShow_bobs>bobs</option>
-                  </select>
-                -->
-                &nbsp;&nbsp;snap:&nbsp;<select id="grabMode">
-                    <option value=grabmode_none>no snap</option>
-                    <option selected value=grabmode_1px>1px</option>
-                    <option value=grabmode_2px>2px</option>
-                    <option value=grabmode_4px>4px</option>
-                    <option value=grabmode_8px>8px</option>
-                    <option value=grabmode_16px>16px</option>
-                    <option value=grabmode_32px>32px</option>
-                </select>
-                <!-- <button type="button" onclick="popView()">Back</button><br> -->
                 <br><canvas id='viewCanvas' type="overflow:scroll;"></canvas>
               </div>
               <div id="frames" class="col_9" style='background-color:rgba(200,200,200,0.5);'>
@@ -198,7 +149,7 @@
             </div>
           <br><br>
           <div id = "mouseFollow" style = "display:none; position:fixed; z-index:10; background-color: #6B6B6B; color: white;">
-            <label id="mouseCoordLabel"></label>
+            <label id="mouseCoordLabel">moncul</label>
           </div>
           <div id = "preview" style = "display:none; position:fixed; z-index:10; background-color: #6B6B6B; color: white;">
             <canvas id='previewCanvas'></canvas>
