--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
                 <input id="file-input2" type="file" name="name" style="display: none;" />
                 <button type="button" onclick="if (!workCanvas) alert('load an image first!'); else document.getElementById('file-input2').click();">Load</button>
                 <button type="button" onclick="downloadJSON(MYDATA, 'PathTool.txt', 'text/plain');">Save</button>
-                <button type="button" onclick="play();">Play</button>
+                <button type="button" onclick="play(1);">Play1</button>
+                <button type="button" onclick="play(2);">Play2</button>
                 <br><canvas id='viewCanvas' type="overflow:scroll;"></canvas>
               </div>
               <div id="frames" class="col_9" style='background-color:rgba(200,200,200,0.5);'>
