proper bhv for add/del list

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
               
               <div id="workBench" class="col_3" style='background-color:rgba(0,0,0,0);'>
                 <input type="text" id="listname" name="listname">
-                <button type="button" onclick="addNewList(null);">New List</button>
+                <button type="button" onclick="addNewList(null);">Add List</button>
+                <button type="button" onclick="deleteList();">Del List</button>
                 <br>
                 <label for="alllists">Current list:</label>
               <select name="alllists" id="alllists" onchange="refreshPointsList();">
