--- a/index.html
+++ b/index.html
@@ -20,12 +20,6 @@
     <script type="text/javascript" src="js/main.js"></script>
 </head>
 <!-- ===================================== END HEADER ===================================== 
-https://stackoverflow.com/questions/32699721/javascript-extract-video-frames-reliably
-https://github.com/jankovicsandras/imagetracerjs
-https://wordsandbuttons.online/simple_image_vectorization.html
-lui ikl vectorise bien, yaurait qu'à choper le format: https://www.autotracer.org/
-cool pour lire le svg: https://www.npmjs.com/package/svg-points
-
 -->
 
       <body onload="onLoad()" onkeydown="keyDown(event)" onkeyup="keyUp(event)">
@@ -50,7 +44,7 @@ cool pour lire le svg: https://www.npmjs.com/package/svg-points
               <select name="alllists" id="alllists" onchange="refreshPointsList();">
               </select>
               <br>
-                <select name="ptslist" id="ptslist" size="0">  
+                <select name="ptslist" id="ptslist" size="0" onselect="onptsel();">  
               </select>                  
               </div>
               <div class="col_9" style='background-color:rgba(0,0,0,0);'>
@@ -59,7 +53,7 @@ cool pour lire le svg: https://www.npmjs.com/package/svg-points
                 <input id="file-input2" type="file" name="name" style="display: none;" />
                 <button type="button" onclick="if (!workCanvas) alert('Please load an image before loading a Path!'); else document.getElementById('file-input2').click();">Load</button>
                 <input id="file-input3" type="file" name="name" style="display: none;" />
-                <button type="button" onclick="Contour();">SVG</button>
+                <button type="button" onclick="Contour();">Contour</button>
                 <button type="button" onclick="downloadJSON(MYDATA, 'PathTool.txt', 'text/plain');">Save</button>
                 <button type="button" onclick="play(1);">Play1</button>
                 <button type="button" onclick="play(2);">Play2</button>
@@ -70,7 +64,7 @@ cool pour lire le svg: https://www.npmjs.com/package/svg-points
                 <center><h3><i>Export</i></h3></center>
                 <label for="export_interp">Interpolation: </label>
                 <select name="export_interp" id="export_interp">
-                  <option value="1">No data</option>
+                  <option value="1">None</option>
                   <option value="2">Export slopes</option>
                   <option value="3">Export all points</option>
                 </select>
