--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 &nbsp;&nbsp;&nbsp;height&nbsp;<input type="text" id="bobH" name="bobH" onchange="onBobH()" size="8">
                 &nbsp;&nbsp;&nbsp;count&nbsp;<input type="text" id="bobC" name="bobC" onchange="onBobC()" size="8">
                 <br><br>include palette&nbsp;<input type="checkbox" id="bobIncludePal" name="bobIncludePal">
-                &nbsp;&nbsp;&nbsp;interlace bitplanes&nbsp;<input type="checkbox" id="bobInterlace" name="bobInterlace">
+                &nbsp;&nbsp;&nbsp;interleave bitplanes&nbsp;<input type="checkbox" id="bobInterlace" name="bobInterlace">
                 &nbsp;&nbsp;&nbsp;skip empty&nbsp;<input type="checkbox" id="bobSkpEmpty" name="bobSkpEmpty">
             </div>
           <br><br>
